--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -102,7 +102,8 @@
     "cstdint": "c",
     "epoll.h": "c",
     "initializer_list": "c",
-    "utility": "c"
+    "utility": "c",
+    "sstream": "c"
   },
   "C_Cpp.errorSquiggles": "disabled"
 }
